--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           
       - name: 'Refresh'
         run: |
+          git add .
           git config --global user.email "siumabon123@gmail.com"
           git config --global user.name "See.Loooo"
           git push origin master
