--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
           git config --global user.email "siumabon123@gmail.com"
           git config --global user.name "See.Loooo"
           git add -A
-          git commit -m "refresh Date"
+          git diff-index --quiet HEAD || git commit -m "refresh Date"
           git push origin master
